Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-8248

qpid-config lists deleted exchange

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • qpid-cpp-1.38.0
    • qpid-cpp-1.39.0
    • C++ Broker
    • None

    Description

      In AMQP 0-10, the last exchange to which a message is sent is cached for improved performance. However this means that the exchange object will not be freed when deleted from the registry until all references to it are freed.

      To reproduce:

       

       1. qpid-config add exchange foo
       2. qpid-send -a foo --content-stdin
       3. enter some text to send a message
       4. in another console qpid-config dell exchange foo
       5. qpid-config exchanges
      

      Should not see the deleted exchange in step 5.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: