QPID-8248: delete management object when exchange is destroyed from the registry